Always show scrollbar to prevent jumping on load

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,10 @@ html, body {
 	height: 100%;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 body {
 	color: white;
 	background-color: #334;
